log.txt
[  7%] Building CXX object CMakeFiles/e4maps.dir/src/MainWindow_Actions.cpp.obj
C:\Users\User\Desktop\e4maps\src\MainWindow_Actions.cpp: In member function 'void MainWindow::on_help_guide()':
<command-line>: error: unable to find string literal operator 'operator""e4maps' with 'const char [1]', 'long long unsigned int' arguments
C:\Users\User\Desktop\e4maps\src\MainWindow_Actions.cpp:500:49: note: in expansion of macro 'APP_NAME_STR'
  500 |                 exeDir + "\\..\\share\\doc\\" + APP_NAME_STR + "\\" + filename,
      |                                                 ^~~~~~~~~~~~
<command-line>: error: unable to find string literal operator 'operator""e4maps' with 'const char [1]', 'long long unsigned int' arguments
C:\Users\User\Desktop\e4maps\src\MainWindow_Actions.cpp:501:45: note: in expansion of macro 'APP_NAME_STR'
  501 |                 exeDir + "\\share\\doc\\" + APP_NAME_STR + "\\" + filename,
      |                                             ^~~~~~~~~~~~
<command-line>: error: unable to find string literal operator 'operator""e4maps' with 'const char [1]', 'long long unsigned int' arguments
C:\Users\User\Desktop\e4maps\src\MainWindow_Actions.cpp:503:50: note: in expansion of macro 'APP_NAME_STR'
  503 |                 exeDir + "\\..\\share\\docs\\" + APP_NAME_STR + "\\" + filename,
      |                                                  ^~~~~~~~~~~~
<command-line>: error: unable to find string literal operator 'operator""e4maps' with 'const char [1]', 'long long unsigned int' arguments
C:\Users\User\Desktop\e4maps\src\MainWindow_Actions.cpp:504:46: note: in expansion of macro 'APP_NAME_STR'
  504 |                 exeDir + "\\share\\docs\\" + APP_NAME_STR + "\\" + filename,
      |                                              ^~~~~~~~~~~~
C:\Users\User\Desktop\e4maps\src\MainWindow_Actions.cpp:509:13: error: could not convert '{<expression error>, <expression error>, <expression error>, <expression error>, std::operator+<char, char_traits<char>, allocator<char> >(std::operator+<char, char_traits<char>, allocator<char> >(exeDir, ((const char*)"\\share\\docs\\")), filename), std::operator+<char, char_traits<char>, allocator<char> >(std::operator+<char, char_traits<char>, allocator<char> >(exeDir, ((const char*)"\\docs\\")), filename)}' from '<brace-enclosed initializer list>' to 'std::vector<std::__cxx11::basic_string<char> >'
  509 |             };
      |             ^
      |             |
      |             <brace-enclosed initializer list>
mingw32-make[2]: *** [CMakeFiles\e4maps.dir\build.make:139: CMakeFiles/e4maps.dir/src/MainWindow_Actions.cpp.obj] Error 1
mingw32-make[1]: *** [CMakeFiles\Makefile2:92: CMakeFiles/e4maps.dir/all] Error 2
mingw32-make: *** [Makefile:135: all] Error 2
